Bug 886128 - Fix various clang warnings and some potential bugs in nonstandard configurations.  r=nnethercote,terrence.